# scsdrpc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: discord-rpc.cmake  scsmodsdk.cmake  spdlog.cmake
src/: DebugConsole.cpp  DebugConsole.hpp  DiscordRichPresence.cpp  DiscordRichPresence.h  EventHandler.cpp  EventHandler.h  main.cpp
